--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
 node_modules
+
+# Build directories
+mobile-app/build/
+mobile-app/android/build/
+mobile-app/android/app/build/
+mobile-app/android/.gradle/
+mobile-app/android/app/.cxx/
+mobile-app/ios/build/
+mobile-app/ios/DerivedData/
+
+# Android build artifacts
+mobile-app/android/local.properties
+mobile-app/android/*.iml
+mobile-app/android/.idea/
+mobile-app/android/app/release/
+mobile-app/android/app/debug/
+
+# iOS build artifacts
+mobile-app/ios/Pods/
+mobile-app/ios/*.xcworkspace/
+mobile-app/ios/*.xcodeproj/xcuserdata/
+mobile-app/ios/*.xcodeproj/project.xcworkspace/
+
+# React Native specific
+*.jsbundle
+.metro-health-check*
+.expo/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temporary files
+.tmp/
+.temp/
