--- a/mobile-app/android/gradle.properties
+++ b/mobile-app/android/gradle.properties
@@ -37,3 +37,6 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# Set Java home for Gradle (update this path after installing Java 17)
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
