--- a/controle-service/package.json
+++ b/controle-service/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "node-fetch": "^3.3.2"
   }
 }
